# autodiff

./: CMakeLists.txt  LICENSE  README.md
include/: ap_number.hpp  autodiff.hpp  elementary_functions.hpp  interval.hpp  newton_function.hpp
src/: main.cpp
